methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:3: error: not found: value biscuit
  biscuit=0
  ^SlugHunting:5: error: not found: value biscuit
    while (biscuit==0){
           ^