methods.slug.SlugHunting.scala.code
def hunt() {
  biscuit=0
  while (isFacingTrail()){
    while (biscuit==0){
    if (!estSurBiscuit()){
      forward()
      baisseBrosse()
      leveBrosse()
    }
    else {
      baisseBrosse()
      leveBrosse()
      prendBiscuit()
    }
  }
  }  
  prendBiscuit()  
}

def isFacingTrail():Boolean = {
  while (!estSurBiscuit){
    if (!estFaceMur){
      forward()
      if (getGroundColor()==Color.green){
        backward ; return true
      }
      else 
        backward()
        left()
    }
    else 
      left()
    }
  return true
  }